2005-07-21  Andras Varga

	* inspector.tcl: added support for custom items on the context
	menu (e.g. right-click on a router, "Inspect Routing Table,,,"
	Usage: via extendContextMenu proc. [idea: Wei Yang Ng]

2005-07-20  Andras Varga

	* inspector.tcl, structinsp.cc: in message inspector Fields and 
	Control Info pages, indented 2nd, 3rd etc lines of very long entries,
	to make it more legible (Tk text tag -lmargin2 option)

2005-06-24  Andras Varga

	* modinsp2.tcl: fix: r= display string tag worked incorrectly: circle
	was displayed with radius = r/2 instead of r

2005-05-01  Andras Varga

	* cMessage inspector now displays message size in bytes as well

2005-04-21  Andras Varga

	* added implementation of timeline

2005-03-31  ------ omnetpp-3.1 released ------

2005-03-22  Andras Varga

	* tkapp.cc/h: handling of -h option moved into TOmnetApp base class.

2005-03-19  Andras Varga

	* gate inspector dialog revised (connection display string made 
	editable)

	* modinsp2.tcl, inspector.tcl: implemented new display string
	tag:
	    tt=<tooltip-string>
	It can be used in module, submodule, connection and msg display
	strings, and will cause the given string to appear in a tooltip.

	* modinsp2.tcl: implemented the "t=<string>,<color>" display
	string tag for connections.

	* improvement: queue length display in module graphics now has
	tooltip

	* fix: circle (drawn with "r=" display string tag) was sometimes
	incorrectly positioned

2005-03-17  Andras Varga

	* tkapp.cc: added calls to new scheduler->executionResumed()

2005-03-07  Andras Varga

	* tkapp.cc: added support for -r <run-number> command-line option, 
	which has the same effect as (but takes priority over) [Tkenv]/
	default-run ini file entry.

2005-03-03  Andras Varga

	* structinsp.cc: fix: Tkenv crashed if control info object didn't have
	cStructDescriptor registered [reported by Kurtis Kredo II]

2005-03-02  Andras Varga

	* tkapp.h/cc: makeOptionsEffective() merged into readPerRunOptions()
